# SearchEngine

./: CMakeLists.txt  README.md  build.bat  build.sh
data/: sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt
include/core/: DocumentIndexer.h  SearchEngine.h  StopWordRemover.h  TFIDFCalculator.h  Tokenizer.h
include/gui/: MainWindow.h
src/core/: DocumentIndexer.cpp  SearchEngine.cpp  StopWordRemover.cpp  TFIDFCalculator.cpp  Tokenizer.cpp
src/gui/: MainWindow.cpp  main.cpp
